--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_NAME=u612973268_broadcast
 DB_USER=u612973268_broadcast
 DB_PASSWORD=E1=iTrLXsvk
-DB_HOST=localhost
+DB_HOST=195.35.61.61
 DB_DIALECT=mysql
 PORT=3000
